--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -67,10 +67,11 @@ html {
   top: 0;
   width: 100%;
   min-width: 1032px;
-  background: #fff;
+  background: rgba(62,98,223,0.7) !important;
   box-shadow: 0 1px 0px rgba(26, 26, 26, 0.1);
   height: 53px;
   font-size: 16px;
+ 
 }
 
 .m_tag_margin{
